<resources>
    <string name="app_name">Pulau komik</string>
    <string name="text_check_internet">Silakan periksa koneksi jaringan</string>
    <string name="text_wait_try">Silakan coba lagi</string>
    <string name="loading">loading…</string>
    <string name="please_login_hint">Silakan masuk dulu</string>
    <string name="main_bottom_home">Beranda</string>
    <string name="main_bottom_teacher">Rak buku</string>
    <string name="main_bottom_mime">Saya</string>
    <string name="main_exit_app">Klik lagi untuk keluar dari aplikasi</string>
    <string name="facebook_app_id">486323411986591</string>
    <string name="fb_login_protocol_scheme">fb486323411986591</string>
    <string name="BookShelfFragment_search_hint_tv">Cari komik</string>
    <string name="BookShelfFragment_vip_center_tv">Pusat\nkeanggotaan</string>
    <string name="BookShelfFragment_recent_read_tv">Akhir-akhir ini yang dibaca</string>
    <string name="BookShelfFragment_recent_read_continue_tv">Lanjutkan membaca</string>
    <string name="BookShelfFragment_recent_read_record_tv">Riwayat membaca</string>
    <string name="BookShelfFragment_recommend_hint_tv">Rekomendasi untukmu</string>
    <string name="BookShelfFragment_change_tv">Muat ulang</string>
    <string name="BookShelfAdapter_more_tv">Klik aku dan temukan \nkomik lebih banyak lagi</string>
    <string name="LongDeleteActivity_select_title_tv">Silakan pilih</string>
    <string name="LongDeleteActivity_select_tv">telah dipilih</string>
    <string name="LongDeleteActivity_select_all">Seluruh Episode</string>
    <string name="LongDeleteActivity_select_all_no">Tidak dipilih</string>
    <string name="LongDeleteActivity_select_delete">Hapus</string>
    <string name="ReadActivity_right_title">Daftar Isi</string>
    <string name="ReadActivity_barrage">Komentar langsung</string>
    <string name="ReadActivity_send">Diluncurkan</string>
    <string name="ReadActivity_bottom_directory">Daftar Isi</string>
    <string name="ReadActivity_bottom_comment">Komentar</string>
    <string name="ReadActivity_bottom_share">Bagikan</string>
    <string name="ReadActivity_bottom_setting">Pengaturan</string>
    <string name="ReadActivity_pre_chapter">Chapter sebelumnya</string>
    <string name="ReadActivity_next_chapter">Chapter selanjutnya</string>
    <string name="ReadActivity_recommend_tv">Yang sedang dilihat orang lain</string>
    <string name="ReadActivity_comment_tv">Komentar</string>
    <string name="ReadActivity_barrage_hint">komentar langsung diluncurkan</string>
    <string name="ReadActivity_support">Suka </string>
    <string name="ReadActivity_add_bookshelf">Masuk ke rak buku</string>
    <string name="ReadActivity_share">Bagikan</string>
    <string name="ReadUseCoinDialog_title">5 koin yang harus dibayarkan</string>
    <string name="ReadUseCoinDialog_pay_hint">Harga 3 koin untuk anggota</string>
    <string name="ReadUseCoinDialog_use_coin">Koin yang bisa digunakan</string>
    <string name="ReadUseCoinDialog_sure">Isi ulang koin</string>
    <string name="ReadBeansExchangeDialog_title">Koin ditukar dengan komentar langsung</string>
    <string name="ReadBeansExchangeDialog_hint">tukar 100 koin, hanya bisa dipakai 30 hari</string>
    <string name="ReadBeansExchangeDialog_sure">Isi ulang koin</string>
    <string name="ReadBeansExchangeDialog_sure1">Tukar</string>
    <string name="ReadBeansExchangeDialog_sure_hint">Koin tidak cukup</string>
    <string name="ReadOpenVipDialog_title">Komentar langsung ekslusif untuk anggota</string>
    <string name="ReadOpenVipDialog_hint">kamu bukan anggota, daftar anggota dan nikmati berbagai macam komentar langsung  </string>
    <string name="ReadOpenVipDialog_sure">Daftar anggota</string>
    <string name="ReadSettingPopupWindow_model">Mode balik halaman</string>
    <string name="ReadSettingPopupWindow_model_hint">Komik ini hanya mendukung membuka halaman selanjutnya dan halaman sebelumnya</string>
    <string name="ReadSettingPopupWindow_page_turning">Klik balik halaman</string>
    <string name="ReadSettingPopupWindow_page_turning_hint">Setelah membuka silahkan klik halaman selanjutnya dan halaman sebelumnya di layar</string>
    <string name="ReadSettingPopupWindow_night_model">Mode malam</string>
    <string name="ReadSettingPopupWindow_barrage">aktif nonaktif komentar langsung</string>
    <string name="ReadSettingPopupWindow_barrage_hint">Kalau tidak melihat komentar langsung, akan banyak hal menarik dan berbeda yang dilewatkan lho</string>
    <string name="ReadSettingPopupWindow_more">Pengaturan lebih banyak komentar langsung</string>
    <string name="BookDetailActivity_detail_tv">Detail</string>
    <string name="BookDetailActivity_selection_tv">Pilih Episode</string>
    <string name="BookDetailActivity_add_bookshelf">telah masuk rak buku</string>
    <string name="BookDetailActivity_add_bookshelf_ed">Ditambahkan ke rak buku</string>
    <string name="BookDetailFragment_book_desc_hint">Ringkasan cerita</string>
    <string name="BookDetailFragment_comment_num">Total komentar</string>
    <string name="BookDetailFragment_author">Penulis：</string>
    <string name="BookDetailFragment_connection_num">&#160;orang yang telah memasukkannya ke rak buku</string>
    <string name="BookDetailFragment_comment_hint">Komentar</string>
    <string name="BookDetailFragment_submit_comment">Posting komentar</string>
    <string name="BookDetailFragment_more_comment">Lihat lebih banyak ulasan</string>
    <string name="BookDetailFragment_start_reading">Mulai membaca</string>
    <string name="SelectionDetailFragment_sort_positive">Urutan positif </string>
    <string name="SelectionDetailFragment_sort_negative">Pesanan terbalik</string>
    <string name="SelectionDetailFragment_start_reading">Mulai membaca</string>
    <string name="MoreCommentActivity_latest_tv">Terbaru</string>
    <string name="MoreCommentActivity_hot_tv">Terpopuler</string>
    <string name="LatestCommentFragment_comment_hint">silahkan masukkan komentar </string>
    <string name="LatestCommentFragment_publish">Memposting</string>
    <string name="CommentDetailsActivity_title">Detail ulasan</string>
    <string name="ReadingHistoryActivity_title">Riwayat penjelajahan</string>
    <string name="ReadingHistoryActivity_edit">Edit</string>
    <string name="ReadingHistoryActivity_edit_cancel">Batal</string>
    <string name="ReadingHistoryActivity_select_all">Seluruh Episode</string>
    <string name="ReadingHistoryActivity_select_all_no">Tidak dipilih</string>
    <string name="ReadingHistoryActivity_delete">Hapus</string>
    <string name="MineFragment_beans_tv">Koin</string>
    <string name="MineFragment_recharge">Isi ulang</string>
    <string name="MineFragment_open_vip">Daftar\nLangsung</string>
    <string name="MineFragment_welfare_hint_title">Area hadiah</string>
    <string name="MineFragment_check_in">Mengambil koin</string>
    <string name="MineFragment_check_in_hint"> orang yang mengambil</string>
    <string name="MineFragment_check_in_vip">koin yang diambil anggota</string>
    <string name="MineFragment_reading_hint_title">Peferensi\nmembaca</string>
    <string name="MineFragment_reading_record">Riwayat\nmembaca</string>
    <string name="MineFragment_buy_book">Telah membeli\nkomik</string>
    <string name="MineFragment_other_hint_title">Lainnya</string>
    <string name="MineFragment_other_feedback">Pendapat dan\numpan balik</string>
    <string name="MineFragment_other_score">Komentar \nbagus APP</string>
    <string name="MemberCenterActivity_title">Pusat keanggotaan</string>
    <string name="MemberCenterActivity_become_vip_hint">Daftar anggota, bisa menikmati \nbanyak hak istimewa</string>
    <string name="MemberCenterActivity_become_vip_saving_money">Anggota setiap bulan hemat $25 </string>
    <string name="MemberCenterActivity_get_beans">Ambil koin</string>
    <string name="MemberCenterActivity_get_beans_ed">Diklaim</string>
    <string name="MemberCenterActivity_vip_profit_hint">Penjelasan hak istimewa anggota</string>
    <string name="MemberCenterActivity_pay">Daftar langsung</string>
    <string name="MemberCenterActivity_beans_everyday">Koin\nsetiap hari</string>
    <string name="MemberCenterActivity_restriction">Batasan\ngratis</string>
    <string name="MemberCenterActivity_discount">Potongan\nuntuk\nanggota</string>
    <string name="MemberCenterActivity_barrage">Komentar\nlangsung\nanggota</string>
    <string name="MemberCenterActivity_Identity">Identitas</string>
    <string name="MemberCenterActivity_profit_01">Anggota setiap harinya gratis mengambil hadiah koin</string>
    <string name="MemberCenterActivity_profit_02">Anggota bisa menikmati membaca gratis karya populer yang ditetapkan</string>
    <string name="MemberCenterActivity_profit_03">Anggota mendapatkan keuntungan dan potongan untuk seluruh chapter komik</string>
    <string name="MemberCenterActivity_profit_04">Model komentar langsung spesial yang bisa dinikmati untuk anggota</string>
    <string name="MemberCenterActivity_profit_05">Anggota akan memiliki simbol spesial dan bisa dimunculkan semau anggota</string>
    <string name="BuyAdapter_subscription">google subscription</string>
    <string name="BuyActivity_title">Pusat Pembayaran</string>
    <string name="BuyActivity_right_title">Detail</string>
    <string name="BuyActivity_beans">koin</string>
    <string name="BuyActivity_Invalid_beans_detail">Detail</string>
    <string name="BuyActivity_Recharge_instructions">Penjelasan cara isi ulang：</string>
    <string name="BuyActivity_Recharge_instructions_tv">Koin yang dihadiahkan untuk isi ulang terbatas di bulan \ntersebut selama satu hari sampai 24:00</string>
    <string name="BuyActivity_buy">Pembelian</string>
    <string name="TransactionDetailsActivity_RechargeRecord">Riwayat isi ulang</string>
    <string name="TransactionDetailsActivity_ExpensesRecordF">Riwayat penggunaan</string>
    <string name="RechargeRecordAdapter_beans">koin</string>
    <string name="BeansExpiredDialog_title">Mencontohkan</string>
    <string name="BeansExpiredDialog_hint">Hadiah koin segera berakhir!\njangan lupa segera habiskan ya</string>
    <string name="BeansExpiredDialog_beans">koin</string>
    <string name="PersonalInfoActivity_title">Informasi diri</string>
    <string name="PersonalInfoActivity_right_title">Simpan</string>
    <string name="PersonalInfoActivity_nick">Nama akun</string>
    <string name="PersonalInfoActivity_sex">Kelamin</string>
    <string name="PersonalInfoActivity_birthday">Tanggal Lahir</string>
    <string name="PersonalInfoActivity_select">Silahkan pilih</string>
    <string name="PersonalInfoActivity_sex_hint">Tetapkan jenis kelamin</string>
    <string name="PersonalInfoActivity_sex_man">Laki-laki</string>
    <string name="PersonalInfoActivity_sex_female">Perempuan</string>
    <string name="EditNameDialog_nick">Nama akun</string>
    <string name="EditNameDialog_nick_hint">Isi nama panggilan</string>
    <string name="EditNameDialog_cancel">batal</string>
    <string name="EditNameDialog_sure">Oke</string>
    <string name="AvatarPopupWindow_photo">Ambil gambar</string>
    <string name="AvatarPopupWindow_album">Album foto</string>
    <string name="AvatarPopupWindow_cancel">batal</string>
    <string name="BarrageSettingActivity_title">Siapkan</string>
    <string name="BarrageSettingActivity_right_title">Pulihkan default</string>
    <string name="BarrageSettingActivity_hint">Tolong perhatikan dalam bersikap dan berbahasa di komentar langsung</string>
    <string name="BarrageSettingActivity_transparency">Tingkat kecerahan</string>
    <string name="BarrageSettingActivity_play_speed">Kecepatan memainkan</string>
    <string name="read_book_exit_title">Masukkan ke rak buku, akan memudahkanmu mencari buku ini nantinya</string>
    <string name="read_book_add_bookshelf">masukkan ke rak buku</string>
    <string name="read_book_exit">Keluar dari membaca</string>
</resources>