<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_marginStart="@dimen/dp_12"
    android:layout_marginEnd="@dimen/dp_12"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_round_solid_5"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="@dimen/dp_12"
            android:paddingTop="@dimen/dp_6"
            android:paddingEnd="@dimen/dp_12"
            android:paddingBottom="@dimen/dp_6"
            android:text="@string/read_book_exit_title"
            android:textColor="@color/color_80"
            android:textSize="@dimen/sp_12" />

        <View style="@style/line_height_1" />

        <TextView
            android:id="@+id/add_bookshelf_tv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:gravity="center"
            android:text="@string/read_book_add_bookshelf"
            android:textColor="@color/app_color"
            android:textSize="@dimen/sp_15" />

        <View style="@style/line_height_1" />

        <TextView
            android:id="@+id/exit_tv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:gravity="center"
            android:text="@string/read_book_exit"
            android:textColor="@color/first_text_color"
            android:textSize="@dimen/sp_15" />
    </LinearLayout>

    <TextView
        android:id="@+id/cancel_tv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_white_round_solid_5"
        android:gravity="center"
        android:text="@string/AvatarPopupWindow_cancel"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16" />
</LinearLayout>