<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_round_solid_5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/take_photo_tv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:gravity="center"
            android:text="@string/AvatarPopupWindow_photo"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <View style="@style/line_height_1" />

        <TextView
            android:id="@+id/album_tv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:gravity="center"
            android:text="@string/AvatarPopupWindow_album"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <TextView
        android:id="@+id/cancel_tv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/AvatarPopupWindow_cancel"
        android:background="@drawable/bg_white_round_solid_5"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16" />
</LinearLayout>